# Wearvana

./: CODE_OF_CONDUCT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: custom_template.md
backend/: .gitignore  Dockerfile  LICENSE  README.md  build.sh  main.py  models.py  pyproject.toml  requirements.txt  test_playwright.py
frontend/: .sassrc  .sassrc.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: Root.jsx  index.css  main.jsx
frontend/src/components/: BottomNav.jsx  Header.jsx  Layout.jsx  Post.jsx  PostsGridFeed.jsx  ProtectedRoute.jsx  Skeleton.jsx  TypewriterPlaceholder.jsx  UploadModal.jsx  UserCard.jsx
frontend/src/context/: AuthProvider.jsx
frontend/src/css/: uploadModel.css
frontend/src/pages/: Explore.jsx  Home.jsx  Login.jsx  Profile.jsx  Register.jsx  SearchUser.jsx  UserProfile.jsx
frontend/src/scss/: colors.scss  custom.scss
frontend/src/services/: AuthClient.jsx
