[project]
name = "wearvana"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.12",
    "bs4>=0.0.2",
    "fastapi>=0.115.8",
    "passwordless>=2.0.0",
    "pillow>=11.1.0",
    "playwright>=1.50.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
